# gr-timing_utils

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md  gnuradio-timing_utils.pc.in
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-timing_utilsConfig.cmake  timing_utilsConfig.cmake
docs/: CMakeLists.txt  README.timing_utils
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
examples/: CMakeLists.txt  loopback_test_uhd.grc  timed_xlating_fir_example.grc  uhd_loopback_latency_test.grc  uhd_timed_pdu_emitter_example.grc  usrp_tag_test.grc  validate_tt.grc  validate_tt.py
grc/: CMakeLists.txt  timing_utils_add_usrp_tags.block.yml  timing_utils_add_usrp_tags_c.block.yml  timing_utils_add_usrp_tags_c.xml  timing_utils_clock_mm_tags_ff.block.yml  timing_utils_clock_mm_tags_ff.xml  timing_utils_edge_detector_bb.block.yml  timing_utils_edge_detector_bb.xml  timing_utils_edge_distance.block.yml  timing_utils_edge_distance.xml  timing_utils_interrupt_emitter.block.yml  timing_utils_interrupt_emitter.xml  timing_utils_retune_uhd_to_timed_tag.block.yml  timing_utils_retune_uhd_to_timed_tag.xml  timing_utils_system_time_diff.block.yml  timing_utils_system_time_diff_X.block.yml  timing_utils_system_time_diff_X.xml  timing_utils_system_time_tagger.block.yml  timing_utils_system_time_tagger_X.block.yml  timing_utils_system_time_tagger_X.xml  timing_utils_tag_uhd_offset.block.yml  timing_utils_tag_uhd_offset_X.block.yml  timing_utils_tag_uhd_offset_X.xml  timing_utils_thresh_trigger_f.block.yml  timing_utils_thresh_trigger_f.xml  timing_utils_time_delta.block.yml  timing_utils_timed_cordic_emulator.block.yml  timing_utils_timed_freq_xlating_fir.block.yml  timing_utils_timed_freq_xlating_fir_XXX.block.yml  timing_utils_timed_freq_xlating_fir_XXX.xml  timing_utils_timed_tag_retuner.block.yml  timing_utils_uhd_timed_pdu_emitter.block.yml  timing_utils_uhd_timed_pdu_emitter.xml  timing_utils_usrp_gps_time_sync.block.yml  timing_utils_usrp_gps_time_sync.xml  timing_utils_wall_clock_time.block.yml
include/gnuradio/timing_utils/: CMakeLists.txt  add_usrp_tags.h  api.h  constants.h  interrupt_emitter.h  system_time_diff.h  system_time_tagger.h  tag_uhd_offset.h  thresh_trigger_f.h  time_delta.h  timed_freq_xlating_fir.h  timed_tag_retuner.h  uhd_timed_pdu_emitter.h  wall_clock_time.h
include/timing_utils/: CMakeLists.txt  ReferenceTimer.h  add_usrp_tags.h  add_usrp_tags_c.h  api.h  clock_mm_tags_ff.h  constants.h  interrupt_emitter.h  system_time_diff.h  system_time_diff_X.h.t  system_time_diff_b.h  system_time_diff_c.h  system_time_diff_f.h  system_time_diff_s.h  system_time_tagger.h  system_time_tagger_X.h.t  system_time_tagger_b.h  system_time_tagger_c.h  system_time_tagger_f.h  system_time_tagger_s.h  tag_uhd_offset.h  tag_uhd_offset_X.h.t  tag_uhd_offset_b.h  tag_uhd_offset_c.h  tag_uhd_offset_f.h  tag_uhd_offset_s.h  thresh_trigger_f.h  time_delta.h  timed_freq_xlating_fir.h  timed_freq_xlating_fir_XXX.h.t  timed_freq_xlating_fir_ccc.h  timed_freq_xlating_fir_ccf.h  timed_freq_xlating_fir_fcc.h  timed_freq_xlating_fir_fcf.h  timed_freq_xlating_fir_scc.h  timed_freq_xlating_fir_scf.h  timed_tag_retuner.h  uhd_timed_pdu_emitter.h  wall_clock_time.h
lib/: CMakeLists.txt  add_usrp_tags_c_impl.cc  add_usrp_tags_c_impl.h  add_usrp_tags_impl.cc  add_usrp_tags_impl.h  clock_mm_tags_ff_impl.cc  clock_mm_tags_ff_impl.h  constants.cc  interrupt_emitter_impl.cc  interrupt_emitter_impl.h  qa_timing_utils.cc  qa_timing_utils.h  reference_timer.h  system_time_diff_X_impl.cc.t  system_time_diff_X_impl.h.t  system_time_diff_impl.cc  system_time_diff_impl.h  system_time_tagger_X_impl.cc.t  system_time_tagger_X_impl.h.t  system_time_tagger_impl.cc  system_time_tagger_impl.h  tag_uhd_offset_X_impl.cc.t  tag_uhd_offset_X_impl.h.t  tag_uhd_offset_impl.cc  tag_uhd_offset_impl.h  test_timing_utils.cc  thresh_trigger_f_impl.cc  thresh_trigger_f_impl.h  time_delta_impl.cc  time_delta_impl.h  timed_freq_xlating_fir_XXX_impl.cc.t  timed_freq_xlating_fir_XXX_impl.h.t  timed_freq_xlating_fir_impl.cc  timed_freq_xlating_fir_impl.h  timed_tag_retuner_impl.cc  timed_tag_retuner_impl.h  uhd_timed_pdu_emitter_impl.cc  uhd_timed_pdu_emitter_impl.h  wall_clock_time_impl.cc  wall_clock_time_impl.h
python/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py  edge_detector_bb.py  edge_distance.py  qa_add_usrp_tags.py  qa_add_usrp_tags_c.py  qa_clock_mm_tags_ff.py  qa_constants.py  qa_interrupt_emitter.py  qa_retune_uhd_to_timed_tag.py  qa_system_time_diff.py  qa_system_time_diff_X.py  qa_system_time_tagger.py  qa_system_time_tagger_X.py  qa_tag_uhd_offset.py  qa_tag_uhd_offset_X.py  qa_time_delta.py  qa_timed_freq_xlating_fir.py  qa_timed_freq_xlating_fir_XXX.py  qa_timed_tag_retuner.py  qa_wall_clock_time.py  retune_uhd_to_timed_tag.py  uhd_timed_cordic_emulator.py  usrp_gps_time_sync.py
python/bindings/: CMakeLists.txt  add_usrp_tags_python.cc  constants_python.cc  interrupt_emitter_python.cc  python_bindings.cc  system_time_diff_python.cc  system_time_tagger_python.cc  tag_uhd_offset_python.cc  thresh_trigger_f_python.cc  time_delta_python.cc  timed_freq_xlating_fir_python.cc  timed_tag_retuner_python.cc  uhd_timed_pdu_emitter_python.cc  wall_clock_time_python.cc
python/bindings/docstrings/: add_usrp_tags_pydoc_template.h  thresh_trigger_f_pydoc_template.h  time_delta_pydoc_template.h  timed_tag_retuner_pydoc_template.h  uhd_timed_pdu_emitter_pydoc_template.h  wall_clock_time_pydoc_template.h
python/timing_utils/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py  edge_detector_bb.py  (+15 more)
python/timing_utils/bindings/: CMakeLists.txt  add_usrp_tags_python.cc  constants_python.cc  interrupt_emitter_python.cc  system_time_diff_python.cc  system_time_tagger_python.cc  tag_uhd_offset_python.cc  thresh_trigger_f_python.cc  time_delta_python.cc  timed_freq_xlating_fir_python.cc  timed_tag_retuner_python.cc  uhd_timed_pdu_emitter_python.cc  wall_clock_time_python.cc
python/timing_utils/bindings/docstrings/: constants_pydoc_template.h
swig/: CMakeLists.txt  timing_utils_swig.i
(+6 files in other folders)
